# fileto

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  comp.sh  fileto.cabal
app/: Argacts.hs  Main.hs
app/Cip/: Beau.hs  BeauMat.hs  Vig.hs
app/Comp/: BitArr.hs  Defs.hs  FileUtils.hs  Huffman.hs  OptBinTree.hs
app/Util/: Rand.hs  Time.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: fileto-0.1.0.0-inplace.conf  package.cache
src/: main.hs
src/Util/: Rand.hs
test/: VigSpec.hs
